# projGLMaths

./: CMakeLists.txt  main.cpp
TestObjects/: DefaultMaterials.h
TestObjects/materials/: Props_-_Boite_de_nuit.mtl  Structure-Boite-de-nuit.mtl  borne_darcade_Pacman.mtl  boule-boite-de-nuit.mtl  cube_wood.mtl  props-boite-de-nuit.mtl  structure-boite-de-nuit.mtl  ube_wood.mtl
ThreeD/: Camera.cpp  Camera.h  Light.cpp  Light.h  Material.hpp  Mesh.cpp  Mesh.h  Mesh.hpp  Polygon.hpp  Texture.hpp  ThreeDObject.cpp  ThreeDObject.h  Vertex.hpp
loader/: loadMesh.h
math/: Matrix.cpp  Matrix.hpp  Quaternion.cpp  Quaternion.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp
shaders/: GLShader.cpp  GLShader.hpp
shaders/basic/: basic.fs.glsl  basic.vs.glsl
tinyObjLoader/: loadMesh.h  tiny_obj_loader.h
window/: Application.hpp  Controls.hpp
